syntax = "proto3";

package OrderAction.events;

option java_multiple_files = true;

message StockDeductionEvent {
    string orderId = 1;
    repeated StockItem stockItems = 2;
}

message StockItem {
    string supplierProductId = 1;
    int32 quantity = 2;
}